--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ body {
     width: 320px;
     margin: 0 auto;
     margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .figure-image {
@@ -80,7 +81,6 @@ body {
 .profile-poster {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 16px;
 }
 
 .profile-post {
@@ -116,6 +116,7 @@ body {
 
 .images {
     display: grid;
+    grid-gap: 10px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas: "figure-imagen1   figure-imagen2   figure-imagen2"
@@ -128,22 +129,51 @@ body {
     grid-area: figure-imagen1;
 }
 
+
 .figure-imagen2 {
     grid-area: figure-imagen2;
 }
+
 
 .figure-imagen3 {
     grid-area: figure-imagen3;
 }
 
+
 .figure-imagen4 {
     grid-area: figure-imagen4;
 }
+
 
 .figure-imagen5 {
     grid-area: figure-imagen5;
 }
 
+
 .figure-imagen6 {
     grid-area: figure-imagen6;
+}
+
+.imagen {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+}
+
+@media screen and (min-width: 1024px){
+    .container {
+        width: 70%;
+    }
+
+    .images {
+        grid-gap: 20px;
+    }
+
+    .profile {
+        margin-bottom: 40px;
+    }
+
+    .profile-name {
+        margin-bottom: 10px;
+    }
 }
