--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,8 @@ body {
     grid-template-areas: "figure-imagen1   figure-imagen2   figure-imagen2"
                          "figure-imagen3   figure-imagen3   figure-imagen4"
                          "figure-imagen5   figure-imagen6   figure-imagen4";
+    
+    margin-bottom: 30px;
 }
 
 
@@ -158,6 +160,17 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 12px;
+}
+
+.section-footer {
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #B9BDCF;
 }
 
 @media screen and (min-width: 1024px){
